test/implicitDup11_3.slq

def foo(){
	x:=H(0:ğ”¹); /// error
	while measure(H(0)){
		y:=x; // no impliit dup
		measure(y);
	}
}
